[package]
name = "hyp-shutdown"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.35.1", features = ["full"] }
